syntax = "proto3";
import "repository_with_branch_query.proto";

option csharp_namespace = "RepoAnalisys.Grpc";

package repository;

service QualityOperator {
  rpc VerifyProjectQuality (RepositoryWithBranchQuery) returns (QualityResponse);
}

message QualityResponse {
  int32 score = 1;
}