syntax = "proto3";

option csharp_namespace = "RepoAnalisys.Grpc";

package repository;

message RepositoryWithBranchQuery {
  string repo_title = 1;
  string branch_title = 2;
  string owner_github_username = 3;
  string author_github_username = 4;
}